# raw-selector

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  LICENSE  README.md  SUPPORTED.md  THIRD_PARTY.md  build_macos.py  build_windows.py  launcher.py  make_icon.py  pyproject.toml  stamp_version.py  verify_dist.py
arw_selector/: __init__.py  cli.py
arw_selector/core/: __init__.py  appinfo.py  cache.py  config.py  cr3.py  export.py  export_options.py  export_queue.py  face_mesh.py  (+16 more)
assets/: icon.icns
tests/: conftest.py  test_adversarial_batch_inputs.py  test_adversarial_export_undo.py  test_adversarial_preset_io.py  test_adversarial_score_bounds.py  test_adversarial_worker_lifetime.py  test_appinfo_migration.py  test_attention_pulse.py  test_cache.py  test_cache_admin.py  test_calibration.py  test_calibration_estimator.py  test_cr3.py  test_destripe.py  test_develop_engine.py  test_export.py  test_export_dialog_raw_options.py  test_export_options.py  test_export_queue.py  test_eyes_closed_penalty.py  test_face_area_spinbox.py  test_face_mesh_masks.py  test_face_priority_noise.py  test_face_priority_scale.py  test_face_priority_ui.py  test_focus.py  test_folder_switch_release.py  test_full_render_safety.py  test_grid_quantize.py  test_grouping.py  test_gui_rendering.py  test_i18n_roundtrip.py  test_jpeg_develop_gating.py  test_jpeg_source.py  test_lensfun_db.py  test_loupe_overlays.py  test_mask_shape_drag.py  test_masks.py  test_memory_limits.py  test_nef_meta.py  (+24 more)
tools/: build_translations.py  export_public.py  fill_translations.py  ko_wording.py  label_tool.py
(+48 files in other folders)
