[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raw-selector"
version = "0.15.1"
description = "RAW focus-based select / develop automation tool"
requires-python = ">=3.11"
dependencies = [
    "rawpy>=0.24",
    # HEIF(.HIF/.HEIC) 디코딩. libheif를 담고 있으며 LGPL-3입니다 —
    # 배포 조건은 THIRD_PARTY.md 참고. 소니·애플이 이 형식으로 기록하고,
    # RAW를 안 찍는 사용자에게는 이것이 원본입니다.
    "pillow-heif>=0.15",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pillow>=10.0",
    "exifread>=3.0",
    "PyYAML>=6.0",
    "piexif>=1.1",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
# 렌즈 프로필 자동 보정. 없어도 수동 광학 보정은 그대로 동작한다.
lens = ["lensfunpy>=1.14"]
dev = ["pytest>=8.0"]

[project.scripts]
raw-select = "arw_selector.cli:main"

[project.gui-scripts]
raw-selector = "arw_selector.gui.app:main"

[tool.setuptools.packages.find]
include = ["arw_selector*"]

[tool.setuptools.package-data]
"arw_selector.core" = ["models/*.onnx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
